<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_jar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".presentation.JarFragment">


    <TextView
        android:id="@+id/jar_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="88dp"
        android:text="@string/jar_name_title"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="442dp" />

    <TextView
        android:id="@+id/jar_budget_view"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="188dp"
        android:text="@string/jar_budget_title"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="529dp" />

    <TextView
        android:id="@+id/jar_theme_view"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="288dp"
        android:text="@string/jar_theme_title"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="529dp" />

    <EditText
        android:id="@+id/jar_name_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:hint="@string/jar_name_input"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/jar_budget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="183dp"
        android:ems="10"
        android:hint="@string/jar_budget_input"
        android:inputType="number" />

    <Spinner
        android:id="@+id/jar_theme_spinner"
        android:layout_width="188dp"
        android:layout_height="34dp"
        android:layout_marginStart="263dp"
        android:layout_marginTop="288dp"
        android:spinnerMode="dropdown" />
</FrameLayout>