<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_expense"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    tools:context=".presentation.ExpenseFragment">

    <TextView
        android:id="@+id/text_expense_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/expense_name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tb_expense_name"
        android:layout_width="301dp"
        android:layout_height="44dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/text_expense_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="138dp"
        android:text="@string/expense_price"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tb_expense_price"
        android:layout_width="302dp"
        android:layout_height="47dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_expense_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="226dp"
        android:text="@string/expense_date"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tb_expense_date"
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="19dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/text_expense_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="226dp"
        android:text="@string/expense_time"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tb_expense_time"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="450dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/text_expense_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="314dp"
        android:text="@string/expense_note"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tb_expense_note"
        android:layout_width="390dp"
        android:layout_height="45dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="309dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_expense_select_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="402dp"
        android:text="@string/expense_select_tags"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tb_expense_new_tag"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="397dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_expense_create_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="430dp"
        android:layout_marginTop="402dp"
        android:text="@string/expense_create_tag"
        android:textSize="20sp" />

</FrameLayout>