<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.CreateExpenseActivity">

    <TextView
        android:id="@+id/create_expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="142dp"
        android:text="@string/create_expense_title"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/expense_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/create_expense_title"
        tools:layout_editor_absoluteX="16dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="596dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/create_expense_cancel"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/create_expense_save"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="false"
            android:text="@string/save_button"
            android:textSize="20sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>