<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.CreateJarActivity">

    <TextView
        android:id="@+id/create_jar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_jar_title"
        android:textColorLink="#3047C2"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <FrameLayout
        android:id="@+id/jar_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/create_jar_view"
        tools:layout_editor_absoluteX="16dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="596dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_jar_button"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="false"
            android:layout_marginEnd="486dp"
            android:text="@string/cancel_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/create_jar_button"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="false"
            android:layout_marginEnd="0dp"
            android:text="@string/create_button"
            android:textSize="20sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>